route-simpleslideshow.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-simpleslideshow
  namespace: groep-10-elizabeth
  uid: 7ae2e679-f248-4db8-a889-cc58cf98dc4a
  resourceVersion: '9294293'
  creationTimestamp: '2025-10-15T14:09:33Z'
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-10-15T14:09:33Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-10-15T14:23:33Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:insecureEdgeTerminationPolicy': {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
spec:
  host: route-conservative-earwig-groep-10-elizabeth.apps.inholland-minor.openshift.eu
  to:
    kind: Service
    name: example
    weight: 100
  port:
    targetPort: 18181-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
